win32ss/dwm/milcore/include/Generated/wgx_commands.h

typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE Angle;
    DOUBLE CenterX;
    DOUBLE CenterY;
    HMIL_RESOURCE hAngleAnimations;
    HMIL_RESOURCE hCenterXAnimations;
    HMIL_RESOURCE hCenterYAnimations;
} MILCMD_ROTATETRANSFORM;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    MilMatrix3x2D Matrix;
    HMIL_RESOURCE hMatrixAnimations;
} MILCMD_MATRIXTRANSFORM;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    MilPoint2D StartPoint;
    MilPoint2D EndPoint;
    HMIL_RESOURCE hTransform;
    HMIL_RESOURCE hStartPointAnimations;
    HMIL_RESOURCE hEndPointAnimations;
} MILCMD_LINEGEOMETRY;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE RadiusX;
    DOUBLE RadiusY;
    MilPointAndSizeD Rect;
    HMIL_RESOURCE hTransform;
    HMIL_RESOURCE hRadiusXAnimations;
    HMIL_RESOURCE hRadiusYAnimations;
    HMIL_RESOURCE hRectAnimations;
} MILCMD_RECTANGLEGEOMETRY;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE RadiusX;
    DOUBLE RadiusY;
    MilPoint2D Center;
    HMIL_RESOURCE hTransform;
    HMIL_RESOURCE hRadiusXAnimations;
    HMIL_RESOURCE hRadiusYAnimations;
    HMIL_RESOURCE hCenterAnimations;
} MILCMD_ELLIPSEGEOMETRY;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    HMIL_RESOURCE hTransform;
    MilFillMode::Enum FillRule;
    UINT32 ChildrenSize;
} MILCMD_GEOMETRYGROUP;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    HMIL_RESOURCE hTransform;
    MilCombineMode::Enum GeometryCombineMode;
    HMIL_RESOURCE hGeometry1;
    HMIL_RESOURCE hGeometry2;
} MILCMD_COMBINEDGEOMETRY;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    HMIL_RESOURCE hTransform;
    MilFillMode::Enum FillRule;
    UINT32 FiguresSize;
} MILCMD_PATHGEOMETRY;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE Opacity;
    MilColorF Color;
    HMIL_RESOURCE hOpacityAnimations;
    HMIL_RESOURCE hTransform;
    HMIL_RESOURCE hRelativeTransform;
    HMIL_RESOURCE hColorAnimations;
} MILCMD_SOLIDCOLORBRUSH;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE Opacity;
    MilPoint2D StartPoint;
    MilPoint2D EndPoint;
    HMIL_RESOURCE hOpacityAnimations;
    HMIL_RESOURCE hTransform;
    HMIL_RESOURCE hRelativeTransform;
    MilColorInterpolationMode::Enum ColorInterpolationMode;
    MilBrushMappingMode::Enum MappingMode;
    MilGradientSpreadMethod::Enum SpreadMethod;
    UINT32 GradientStopsSize;
    HMIL_RESOURCE hStartPointAnimations;
    HMIL_RESOURCE hEndPointAnimations;
} MILCMD_LINEARGRADIENTBRUSH;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE Opacity;
    MilPoint2D Center;
    DOUBLE RadiusX;
    DOUBLE RadiusY;
    MilPoint2D GradientOrigin;
    HMIL_RESOURCE hOpacityAnimations;
    HMIL_RESOURCE hTransform;
    HMIL_RESOURCE hRelativeTransform;
    MilColorInterpolationMode::Enum ColorInterpolationMode;
    MilBrushMappingMode::Enum MappingMode;
    MilGradientSpreadMethod::Enum SpreadMethod;
    UINT32 GradientStopsSize;
    HMIL_RESOURCE hCenterAnimations;
    HMIL_RESOURCE hRadiusXAnimations;
    HMIL_RESOURCE hRadiusYAnimations;
    HMIL_RESOURCE hGradientOriginAnimations;
} MILCMD_RADIALGRADIENTBRUSH;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE Opacity;
    MilPointAndSizeD Viewport;
    MilPointAndSizeD Viewbox;
    DOUBLE CacheInvalidationThresholdMinimum;
    DOUBLE CacheInvalidationThresholdMaximum;
    HMIL_RESOURCE hOpacityAnimations;
    HMIL_RESOURCE hTransform;
    HMIL_RESOURCE hRelativeTransform;
    MilBrushMappingMode::Enum ViewportUnits;
    MilBrushMappingMode::Enum ViewboxUnits;
    HMIL_RESOURCE hViewportAnimations;
    HMIL_RESOURCE hViewboxAnimations;
    MilStretch::Enum Stretch;
    MilTileMode::Enum TileMode;
    MilHorizontalAlignment::Enum AlignmentX;
    MilVerticalAlignment::Enum AlignmentY;
    MilCachingHint::Enum CachingHint;
    HMIL_RESOURCE hImageSource;
} MILCMD_IMAGEBRUSH;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE Opacity;
    MilPointAndSizeD Viewport;
    MilPointAndSizeD Viewbox;
    DOUBLE CacheInvalidationThresholdMinimum;
    DOUBLE CacheInvalidationThresholdMaximum;
    HMIL_RESOURCE hOpacityAnimations;
    HMIL_RESOURCE hTransform;
    HMIL_RESOURCE hRelativeTransform;
    MilBrushMappingMode::Enum ViewportUnits;
    MilBrushMappingMode::Enum ViewboxUnits;
    HMIL_RESOURCE hViewportAnimations;
    HMIL_RESOURCE hViewboxAnimations;
    MilStretch::Enum Stretch;
    MilTileMode::Enum TileMode;
    MilHorizontalAlignment::Enum AlignmentX;
    MilVerticalAlignment::Enum AlignmentY;
    MilCachingHint::Enum CachingHint;
    HMIL_RESOURCE hDrawing;
} MILCMD_DRAWINGBRUSH;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE Opacity;
    MilPointAndSizeD Viewport;
    MilPointAndSizeD Viewbox;
    DOUBLE CacheInvalidationThresholdMinimum;
    DOUBLE CacheInvalidationThresholdMaximum;
    HMIL_RESOURCE hOpacityAnimations;
    HMIL_RESOURCE hTransform;
    HMIL_RESOURCE hRelativeTransform;
    MilBrushMappingMode::Enum ViewportUnits;
    MilBrushMappingMode::Enum ViewboxUnits;
    HMIL_RESOURCE hViewportAnimations;
    HMIL_RESOURCE hViewboxAnimations;
    MilStretch::Enum Stretch;
    MilTileMode::Enum TileMode;
    MilHorizontalAlignment::Enum AlignmentX;
    MilVerticalAlignment::Enum AlignmentY;
    MilCachingHint::Enum CachingHint;
    HMIL_RESOURCE hVisual;
} MILCMD_VISUALBRUSH;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE Opacity;
    HMIL_RESOURCE hOpacityAnimations;
    HMIL_RESOURCE hTransform;
    HMIL_RESOURCE hRelativeTransform;
    HMIL_RESOURCE hBitmapCache;
    HMIL_RESOURCE hInternalTarget;
} MILCMD_BITMAPCACHEBRUSH;