win32ss/dwm/milcore/include/Generated/wgx_commands.cs

        [FieldOffset(44)] internal DUCE.ResourceHandle hAngleYAnimations;
        [FieldOffset(48)] internal DUCE.ResourceHandle hCenterXAnimations;
        [FieldOffset(52)] internal DUCE.ResourceHandle hCenterYAnimations;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_ROTATETRANSFORM
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double Angle;
        [FieldOffset(16)] internal double CenterX;
        [FieldOffset(24)] internal double CenterY;
        [FieldOffset(32)] internal DUCE.ResourceHandle hAngleAnimations;
        [FieldOffset(36)] internal DUCE.ResourceHandle hCenterXAnimations;
        [FieldOffset(40)] internal DUCE.ResourceHandle hCenterYAnimations;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_MATRIXTRANSFORM
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal MilMatrix3x2D Matrix;
        [FieldOffset(56)] internal DUCE.ResourceHandle hMatrixAnimations;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_LINEGEOMETRY
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal Point StartPoint;
        [FieldOffset(24)] internal Point EndPoint;
        [FieldOffset(40)] internal DUCE.ResourceHandle hTransform;
        [FieldOffset(44)] internal DUCE.ResourceHandle hStartPointAnimations;
        [FieldOffset(48)] internal DUCE.ResourceHandle hEndPointAnimations;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_RECTANGLEGEOMETRY
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double RadiusX;
        [FieldOffset(16)] internal double RadiusY;
        [FieldOffset(24)] internal Rect Rect;
        [FieldOffset(56)] internal DUCE.ResourceHandle hTransform;
        [FieldOffset(60)] internal DUCE.ResourceHandle hRadiusXAnimations;
        [FieldOffset(64)] internal DUCE.ResourceHandle hRadiusYAnimations;
        [FieldOffset(68)] internal DUCE.ResourceHandle hRectAnimations;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_ELLIPSEGEOMETRY
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double RadiusX;
        [FieldOffset(16)] internal double RadiusY;
        [FieldOffset(24)] internal Point Center;
        [FieldOffset(40)] internal DUCE.ResourceHandle hTransform;
        [FieldOffset(44)] internal DUCE.ResourceHandle hRadiusXAnimations;
        [FieldOffset(48)] internal DUCE.ResourceHandle hRadiusYAnimations;
        [FieldOffset(52)] internal DUCE.ResourceHandle hCenterAnimations;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_GEOMETRYGROUP
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal DUCE.ResourceHandle hTransform;
        [FieldOffset(12)] internal FillRule FillRule;
        [FieldOffset(16)] internal UInt32 ChildrenSize;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_COMBINEDGEOMETRY
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal DUCE.ResourceHandle hTransform;
        [FieldOffset(12)] internal GeometryCombineMode GeometryCombineMode;
        [FieldOffset(16)] internal DUCE.ResourceHandle hGeometry1;
        [FieldOffset(20)] internal DUCE.ResourceHandle hGeometry2;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_PATHGEOMETRY
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal DUCE.ResourceHandle hTransform;
        [FieldOffset(12)] internal FillRule FillRule;
        [FieldOffset(16)] internal UInt32 FiguresSize;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_SOLIDCOLORBRUSH
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double Opacity;
        [FieldOffset(16)] internal MilColorF Color;
        [FieldOffset(32)] internal DUCE.ResourceHandle hOpacityAnimations;
        [FieldOffset(36)] internal DUCE.ResourceHandle hTransform;
        [FieldOffset(40)] internal DUCE.ResourceHandle hRelativeTransform;
        [FieldOffset(44)] internal DUCE.ResourceHandle hColorAnimations;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_LINEARGRADIENTBRUSH
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double Opacity;
        [FieldOffset(16)] internal Point StartPoint;
        [FieldOffset(32)] internal Point EndPoint;
        [FieldOffset(48)] internal DUCE.ResourceHandle hOpacityAnimations;
        [FieldOffset(52)] internal DUCE.ResourceHandle hTransform;
        [FieldOffset(56)] internal DUCE.ResourceHandle hRelativeTransform;
        [FieldOffset(60)] internal ColorInterpolationMode ColorInterpolationMode;
        [FieldOffset(64)] internal BrushMappingMode MappingMode;
        [FieldOffset(68)] internal GradientSpreadMethod SpreadMethod;
        [FieldOffset(72)] internal UInt32 GradientStopsSize;
        [FieldOffset(76)] internal DUCE.ResourceHandle hStartPointAnimations;
        [FieldOffset(80)] internal DUCE.ResourceHandle hEndPointAnimations;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_RADIALGRADIENTBRUSH
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double Opacity;
        [FieldOffset(16)] internal Point Center;
        [FieldOffset(32)] internal double RadiusX;
        [FieldOffset(40)] internal double RadiusY;
        [FieldOffset(48)] internal Point GradientOrigin;
        [FieldOffset(64)] internal DUCE.ResourceHandle hOpacityAnimations;
        [FieldOffset(68)] internal DUCE.ResourceHandle hTransform;
        [FieldOffset(72)] internal DUCE.ResourceHandle hRelativeTransform;
        [FieldOffset(76)] internal ColorInterpolationMode ColorInterpolationMode;
        [FieldOffset(80)] internal BrushMappingMode MappingMode;
        [FieldOffset(84)] internal GradientSpreadMethod SpreadMethod;
        [FieldOffset(88)] internal UInt32 GradientStopsSize;
        [FieldOffset(92)] internal DUCE.ResourceHandle hCenterAnimations;
        [FieldOffset(96)] internal DUCE.ResourceHandle hRadiusXAnimations;
        [FieldOffset(100)] internal DUCE.ResourceHandle hRadiusYAnimations;
        [FieldOffset(104)] internal DUCE.ResourceHandle hGradientOriginAnimations;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_IMAGEBRUSH
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double Opacity;
        [FieldOffset(16)] internal Rect Viewport;
        [FieldOffset(48)] internal Rect Viewbox;
        [FieldOffset(80)] internal double CacheInvalidationThresholdMinimum;
        [FieldOffset(88)] internal double CacheInvalidationThresholdMaximum;
        [FieldOffset(96)] internal DUCE.ResourceHandle hOpacityAnimations;
        [FieldOffset(100)] internal DUCE.ResourceHandle hTransform;
        [FieldOffset(104)] internal DUCE.ResourceHandle hRelativeTransform;
        [FieldOffset(108)] internal BrushMappingMode ViewportUnits;
        [FieldOffset(112)] internal BrushMappingMode ViewboxUnits;
        [FieldOffset(116)] internal DUCE.ResourceHandle hViewportAnimations;
        [FieldOffset(120)] internal DUCE.ResourceHandle hViewboxAnimations;
        [FieldOffset(124)] internal Stretch Stretch;
        [FieldOffset(128)] internal TileMode TileMode;
        [FieldOffset(132)] internal AlignmentX AlignmentX;
        [FieldOffset(136)] internal AlignmentY AlignmentY;
        [FieldOffset(140)] internal CachingHint CachingHint;
        [FieldOffset(144)] internal DUCE.ResourceHandle hImageSource;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_DRAWINGBRUSH
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double Opacity;
        [FieldOffset(16)] internal Rect Viewport;
        [FieldOffset(48)] internal Rect Viewbox;
        [FieldOffset(80)] internal double CacheInvalidationThresholdMinimum;
        [FieldOffset(88)] internal double CacheInvalidationThresholdMaximum;
        [FieldOffset(96)] internal DUCE.ResourceHandle hOpacityAnimations;
        [FieldOffset(100)] internal DUCE.ResourceHandle hTransform;
        [FieldOffset(104)] internal DUCE.ResourceHandle hRelativeTransform;
        [FieldOffset(108)] internal BrushMappingMode ViewportUnits;
        [FieldOffset(112)] internal BrushMappingMode ViewboxUnits;
        [FieldOffset(116)] internal DUCE.ResourceHandle hViewportAnimations;
        [FieldOffset(120)] internal DUCE.ResourceHandle hViewboxAnimations;
        [FieldOffset(124)] internal Stretch Stretch;
        [FieldOffset(128)] internal TileMode TileMode;
        [FieldOffset(132)] internal AlignmentX AlignmentX;
        [FieldOffset(136)] internal AlignmentY AlignmentY;
        [FieldOffset(140)] internal CachingHint CachingHint;
        [FieldOffset(144)] internal DUCE.ResourceHandle hDrawing;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_VISUALBRUSH
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double Opacity;
        [FieldOffset(16)] internal Rect Viewport;
        [FieldOffset(48)] internal Rect Viewbox;
        [FieldOffset(80)] internal double CacheInvalidationThresholdMinimum;
        [FieldOffset(88)] internal double CacheInvalidationThresholdMaximum;
        [FieldOffset(96)] internal DUCE.ResourceHandle hOpacityAnimations;
        [FieldOffset(100)] internal DUCE.ResourceHandle hTransform;
        [FieldOffset(104)] internal DUCE.ResourceHandle hRelativeTransform;
        [FieldOffset(108)] internal BrushMappingMode ViewportUnits;
        [FieldOffset(112)] internal BrushMappingMode ViewboxUnits;
        [FieldOffset(116)] internal DUCE.ResourceHandle hViewportAnimations;
        [FieldOffset(120)] internal DUCE.ResourceHandle hViewboxAnimations;
        [FieldOffset(124)] internal Stretch Stretch;
        [FieldOffset(128)] internal TileMode TileMode;
        [FieldOffset(132)] internal AlignmentX AlignmentX;
        [FieldOffset(136)] internal AlignmentY AlignmentY;
        [FieldOffset(140)] internal CachingHint CachingHint;
        [FieldOffset(144)] internal DUCE.ResourceHandle hVisual;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_BITMAPCACHEBRUSH
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double Opacity;
        [FieldOffset(16)] internal DUCE.ResourceHandle hOpacityAnimations;
        [FieldOffset(20)] internal DUCE.ResourceHandle hTransform;
        [FieldOffset(24)] internal DUCE.ResourceHandle hRelativeTransform;
